@@ -1,3 +1,10 @@
+Thu Apr 24 20:31:03 2008  Bruno Haible       <bruno@clisp.org>
+
+	* main.c (main): Move call to catch SIGBUG to before installation of
+	libsigsegv handler, since on some systems libsigsegv installs its
+	own handler for SIGBUS.
+	[STACK_SIZE]: Add a constant instead of inline. ADR.
+
 Wed Apr 23 22:30:27 2008  Duncan Moore       <duncan.m00re@btinternet.com>
 
 	* builtin.c (state): Do as an integer array for systems that need it.
